...
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/amount_padding"
                            android:paddingEnd="@dimen/amount_padding"
                            android:paddingTop="@dimen/currency_code_padding"
                            android:layout_marginEnd="@dimen/transfer_currency_end"
                            android:textAppearance="@style/TextAppearance.Hyperwallet.Currency.Caption"
                            app:layout_constraintEnd_toStartOf="@+id/transfer_amount"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="@string/transfer_currency_code_placeholder" />

                        <EditText
                            android:id="@+id/transfer_amount"
                            android:layout_width="wrap_content"
...
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/transfer_amount_currency"
                            android:layout_width="wrap_content"
                            android:layout_marginStart="@dimen/widget_default_margin"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/currency_padding"
                            android:textAppearance="@style/TextAppearance.Hyperwallet.CurrencyCode.Caption"
                            app:layout_constraintBottom_toBottomOf="parent"
...
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="@dimen/grid_padding_top"
                    android:paddingBottom="@dimen/item_horizontal_padding">

                    <TextView
                        android:id="@+id/transfer_summary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Hyperwallet.Caption"
                        tools:text="@string/transfer_summary_placeholder" />
                </LinearLayout>

...
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_bottom_margin"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/item_horizontal_padding">

                    <TextView
                        android:id="@+id/transfer_all_funds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="@dimen/clickable_text_padding"
                        android:textAppearance="@style/TextAppearance.Hyperwallet.Clickable.Caption"
...
                android:layout_marginStart="@dimen/grid_margin_left"
                android:layout_marginEnd="@dimen/grid_margin_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/transfer_destination"
                    android:visibility="visible"
                    layout="@layout/widget_transfer_destination" />

                <include
                    android:id="@+id/add_transfer_destination"
                    android:visibility="gone"
                    layout="@layout/widget_add_transfer_destination" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/transfer_header_container_with_error"
...
                    android:id="@+id/transfer_notes_layout"
                    android:theme="@style/Widget.Hyperwallet.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/transfer_notes"
                        android:textColor="@color/regularColorSecondary"
                        android:textAppearance="@style/TextAppearance.Hyperwallet.Body1"
                        android:paddingStart="@dimen/edit_text_offset"
                        android:paddingEnd="@dimen/edit_text_offset"
                        android:inputType="text"
                        android:maxLines="1"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/transfer_action_button"
                    style="@style/Widget.Hyperwallet.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginStart="@dimen/button_left_margin"
                    android:layout_marginTop="@dimen/grid_margin_top"
...
