<resources>
    <string name="app_name">transfer</string>
    <string name="title_activity_create_transfer">Transfer Funds</string>
    <string name="not_available">Not Available</string>
    <string name="transfer_method_list_item_description">Ending on %s</string>
    <!-- title and font icon -->
    <string name="bank_account">Bank Account</string>
    <string name="bank_card">Debit Card</string>
    <string name="wire_account">Wire Transfer</string>
    <string name="paper_check">Paper Check</string>
    <string name="prepaid_card">Prepaid Card</string>
    <string name="paypal_account">PayPal Account</string>

    <string name="bank_account_font_icon">\uE000</string>
    <string name="bank_card_font_icon">\uE005</string>
    <string name="wire_account_font_icon">\uE00D</string>
    <string name="paper_check_font_icon">\uE002</string>
    <string name="prepaid_card_font_icon">\uE00A</string>
    <string name="paypal_account_font_icon">\uE021</string>

...
